# MarketSim

./: CMakeLists.txt  README.md  basic_agent.py  test_orderbook.py
include/: Order.hpp  OrderBook.hpp  OrderBookManager.hpp  Trade.hpp
python/: Untitled.ipynb  config.py  metrics.csv  requirements.txt  simulation.py
python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
python/orderbook_agents/: basic_agent.py  liquidity_taker.py  market_maker.py  mean_reverter.py  rl_agent.py  supervised_predictor.py  trend_follower.py
src/: OrderBook.cpp  OrderBookManager.cpp  main.cpp  python_bindings.cpp
